syntax = "proto3";
package waelsy123.checkers.checkers;

option go_package = "github.com/waelsy123/checkers/x/checkers/types";

message StoredGame {
  string index = 1; 
  string board = 2; 
  string turn = 3; 
  string black = 4; 
  string red = 5; 
  uint64 moveCount = 6;
  string beforeIndex = 7;
  string afterIndex = 8;
  string deadline = 9;
  string winner = 10;
}

